[package]
name = "gofile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
gofile_api = { git = "https://github.com/amachang/gofile_api.git", version = "0.1.0" }
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = "1.29.1"
tokio-util = { version = "0.7.8", features = ["compat"] }
url = "2.4.0"
uuid = "1.4.1"
